--- a/projets.html
+++ b/projets.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <li><a href="projet.html">Projets</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="projets.html">Projets</a></li>
         <li><a href="parcours.html">Parcours</a></li>
         <li><a href="CV.html">CV</a></li>
     </header>
