--- a/projets.html
+++ b/projets.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <header>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="projets.html">Projets</a></li>
-        <li><a href="parcours.html">Parcours</a></li>
-        <li><a href="CV.html">CV</a></li>
+        <div class="logo">Antonin Mottet</div>
+        <nav class="nav-links">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="projets.html">Projets</a></li>
+            <li><a href="parcours.html">Parcours</a></li>
+            <li><a href="CV.html">CV</a></li>
+        </nav>
     </header>
 </body>
 </html>
