--- a/parcours.html
+++ b/parcours.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="parcours.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Parcours</title>
 </head>
 <body>
     <header>
@@ -71,8 +71,8 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-                <div class="period">Mars 2024 - Juin 2024</div>
-                <div class="degree">Stage Administration Systèmes & Réseaux</div>
+                <div class="period">Mars 2025 - Juin 2025</div>
+                <div class="degree">Stage en Administration Systèmes & Réseaux</div>
                 <div class="institution">Air Corsica</div>
                 <div class="location">Ajaccio, France</div>
                 <div class="description">
